tests/conformance/invalid/05-nested-section/input.sgl
%% reference

# Outer Section
  # Inner Section
    * fact: nested sections are a spec violation
